tests/transpiler/x/zig/dataset_where_filter.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/dataset_where_filter.zig:16:20: error: unable to infer array size
    const people: [_]People = [_]People{.{ .name = "Alice", .age = 30 }, .{ .name = "Bob", .age = 15 }, .{ .name = "Charlie", .age = 65 }, .{ .name = "Diana", .age = 45 }};
                   ^
